# EliTeL

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup-fluentd-init.sh  test.py
config/: td-agent.conf
scripts/: bin_bash.sh  down.sh  restart_td_agent.sh  run.sh  start_td_agent.sh  stay_awake.sh
src/: log.py  user.py
