[tool.poetry]
name = "elitel"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fluent-logger = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
