[tool.poetry]
name = "elitel"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fluent-logger = "^0.10.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
ruff = "^0.0.254"
black = "^23.1.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true

[tool.black]
line-length = 100
experimental-string-processing = true